--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "crypto": "^1.0.1",
     "dateformat": "^3.0.3",
     "express": "^4.17.1",
+    "jira": "^0.9.2",
+    "jira-client": "^6.21.1",
     "pg-format": "^1.0.4"
   },
   "devDependencies": {
